--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
   </head>
 
   <body>          
     <div class="col-xs-12 header_div text-center">
-    <h2>Sound Controlled Aliens!</h2>
-    <p>Test out the sounds. The list is: clap, snap and scream. There is also background noise.</p>
+    <h2>Sound Controlled Animals!</h2>
+    <p>Test out the sounds. The list of animals are: dog(barking), cat(meowing), chicken(bacaw or boc) and cow(mooing). There is also background noise.</p>
     </div>
     <div class="main_div">
       <center>
@@ -21,14 +25,13 @@
           <h3 id="result_label"> I can hear </h3>
           <h4 id="result_confidence"> Accuracy: </h4>
           <br>
-          <img src="aliens-01.png" id="alien1" width="300" height="300">
-          <img src="aliens-02.png" id="alien2" width="300" height="300">
-          <img src="aliens-03.png" id="alien3" width="300" height="300">
-          <img src="aliens-04.png" id="alien4" width="300" height="300">
+          <img src="EAR.png" width="495" height="501">      
+          <div class="copy_right_footer">
+          Made by Nahom Biniam
+          </div>
       </center>
       </div>
-      <div class="copy_right_footer">
-          Made by Nahom Biniam
+
 <script src="main.js"></script>
   </body>
 </html>
