--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
   </head>
-
   <body>          
     <div class="col-xs-12 header_div text-center">
     <h2>Sound Controlled Animals!</h2>
@@ -22,10 +22,10 @@
       <center>
           <br>
           <button class="btn btn-warning" onclick="startClassification();">START</button>
-          <h3 id="result_label"> I can hear </h3>
-          <h4 id="result_confidence"> Accuracy: </h4>
+          <h3 id="result_label"> Turn on microphone to start testing! </h3>
+          <h4 id="result_confidence"> Turn on microphone to dislay accuracy! </h4>
           <br>
-          <img src="EAR.png" width="495" height="501">      
+          <img src="EAR.png" id="image" width="495" height="501">      
           <div class="copy_right_footer">
           Made by Nahom Biniam
           </div>
